// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManifestSection renders the expected snapshot for a populated section 1`] = `
<table
  className="manifest-section "
>
  <caption
    className="manifest-section__title"
  >
    Lorem ipsum
  </caption>
  <tbody>
    <tr>
      <td>
        foo
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`ManifestSection renders the expected snapshot for a section with no children 1`] = `
<table
  className="manifest-section manifest-section--empty"
>
  <caption
    className="manifest-section__title"
  >
    Lorem ipsum
  </caption>
  <tbody />
</table>
`;
